	12.Fix round-robin algorithm of command.c:rxvt_find_cmd_child.
	13.Fix crash if click on empty space of menubar. Thanks to Zhu
	   Qunying for the patch.
	14.Fix severl compile error - we must call DBG_MSG after variable
	   declaration in functions as we are using C, not C++. Thanks to
	   lzl@mitbbs.com for bringing this issue to me and provide patch.

    * Enhancements:
	1. Add --with-max-profiles to configure script as suggested
	   by Avi Yagodnick.
	2. Add experimental fast (hopefully) memory management code. It
	   is disabled by default.


0.5.0 to 0.5.1
\-----------------------------------
Jimmy Zhou <jimmyzhou@users.sourceforge.net>
    * Bug Fixes:
	1. Compile error at rxvt_free_clipping (screen.c) when XFT
	   support is not enabled.
	2. Fix typo in acute acent. Thanks to Benedikt Magnusson
	   for the bug report.
	3. Fix file descriptor leakage - we should close /dev/ptmx
	   after forking. Thanks to Edgar Toernig for the report
	   and patch.
	4. Always show cursor while mrxvt loses focus. Thanks to
	   Edgar Toernig for the patch.
	5. Adjust several limits, e.g., max border width and min
	   blink time according to Edgar Toernig's patch.
	6. Fix rpmbuild (Sourceforge Bug #1482311)
	7. Fix crash on OpenBSD 3.9 when MULTI_CHAR is enabled -
	   the variable morecur (defined as char) in screen.c is
	   treated as unsigned (WtF!).
	8. Fix compile error on OpenBSD 3.9 when MULTI_CHAR is
	   enabled (OpenBSD keeps playing game with us!).
	9. Saving session behavior now conforms to profile support.
	10. Apply patches from FreeBSD ports.
	11. Fix crash on Solaris when calling XLookupString. Xlib
	   manual states that a portable program should pass NULL
	   to the last (compose) parameter.
	12. Add mrxvt 0.4.x compatible keyboard combinations to 
	   mrxvtrc. They are disabled by default though. Thanks to
	   Mihail Zenkov for the report and Dimitri AT sun.com for
	   the solution.

    * Enhancements: